forth/test/fail/test_redundant_discard.af
fun: .test_redundant_discard { -- out }
  { -- }
  0
end
